added delete task api
