# cmd/api/routes.go
@@ -33,6 +33,7 @@ func (app *application) routes() http.Handler {
 		v1.GET("/tasks/getTaskList/:page", app.getAllTasks)
 		v1.GET("/tasks/GetTaskDetail/:task_id", app.getTaskDetail)
 		v1.POST("/tasks/stopTask/:task_id", app.stopTask)
+		v1.DELETE("/tasks/delete/:task_id", app.deleteTask)
 	}
 
 	g.GET("/swagger/*any", func(c *gin.Context) {
